Fixed v & h align classes

--- a/public/app/sass/_grid.scss
+++ b/public/app/sass/_grid.scss
@@ -1,5 +1,13 @@
+.h-align-content-left {
+	text-align: left;
+}
+
 .h-align-content-center {
 	text-align: center;
+}
+
+.h-align-content-right {
+	text-align: right;
 }
 
 .v-align-top {
